fixes top margins too bigs

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -28,9 +28,10 @@ margin: 30px 0;
 
 /* Main marketing message and sign up button */
 .container-padded {
-margin: 60px 0;
+margin: 30px 0;
 }
 .jumbotron {
+margin: 30px 0;
 text-align: center;
 }
 .jumbotron h1 {
